# TelegramWeatherBot

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  STYLEGUIDE.md
src/: main.cpp
src/config/: config.cpp  config.hpp
src/database/: database.cpp  database.hpp
src/database/dto/: user.hpp
src/database/sqlite/: sqlite.cpp  sqlite.hpp
src/http/: http_client.cpp  http_client.hpp
src/telegram_bot/: telegram_bot.cpp  telegram_bot.hpp
src/telegram_bot/dto/: message_context.hpp
src/telegram_bot/telegram_client_api/: telegram_client_api.cpp  telegram_client_api.hpp
src/utils/: signal_handler.cpp  signal_handler.hpp
src/utils/stopwatch/: stopwatch.cpp  stopwatch.hpp
src/weather_checker/: weather_checker.cpp  weather_checker.hpp
